# cocosuite

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
cocosuite/scripts/manipulation/: coco_split.py  merge_multiple_coco_files.py
cocosuite/scripts/visualization/: common.py  visualization.py
cocotools/: cli.py
cocotools/scripts/manipulation/: __init__.py  coco_filter.py  coco_merge.py  merge_multiple_coco_files.py  property_split.py  random_split.py
examples/: coco_example_1.json  coco_example_2.json  config_manipulation.json  config_property_split.json  manipulation_config.json
tests/: conftest.py
tests/scripts/manipulation/: test_coco_filter.py  test_coco_merge.py  test_coco_split.py  test_merge_multiple_coco_files.py  test_property_split.py  test_random_split.py
