[metadata]
name = cocotools
version = 0.0.1
author = Jorge Núñez Santiago
description = A package to work with COCO datasets
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.10
install_requires =
    numpy==2.0.0
    matplotlib==3.9.0
    pycocotools==2.0.8
    pre-commit==3.7.1
    loguru==0.7.2
    pytest==8.2.2
    fire==0.6.0

[options.packages.find]
exclude =
    tests
    tests.*
    docs*

[options.entry_points]
console_scripts =
    cocotools = cocotools.cli:main